--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-	<head>
-		<meta charset="UTF-8">
-	</head>
-	<body>
-		<h1>Hello HTML!!</h1>
-	</body>
+<head>
+	<meta charset="UTF-8">
+</head>
+<body>
+	<h1>Hello HTML!!</h1>
+	<script src="main.js"></script>
+</body>
 </html>
