--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>
-<head>
-	<meta charset="UTF-8">
-</head>
-<body>
-	<h1>Hello HTML!!</h1>
-	<script src="main.js"></script>
-</body>
+<!DOCTYPE html>
+	<html lang="en">
+		<meta charset="utf-8">
+		<style>body{margin: 0px; padding: 0px;}</style>
+	</head>
+	<body>
+		<div id="three"></div>
+		<script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js" defer></script>
+		<script src="./main.js" defer></script>
+	</body>
 </html>
